Tests/Runtime2/Error/Multilingual/.build/catchjapanese.pr
[
  {
    "name": "CatchJapanese",
    "description": "Sets the %caughtJapanese% variable to true (with a null-like placeholder value as indicated by the step).",
    "comment": null,
    "steps": [
      {
        "index": 0,
        "text": "set %caughtJapanese% = true",
        "lineNumber": 2,
        "indent": 0,
        "comment": null,
        "actions": [
          {
            "module": "variable",
            "action": "set",
            "parameters": [
              {
                "name": "Name",
                "value": "%caughtJapanese%",
                "type": "string"
              },
              {
                "name": "Value",
                "value": true,
                "type": "bool"
              }
            ],
            "return": null,
            "defaults": [
              {
                "name": "asdefault",
                "value": false,
                "type": "bool"
              }
            ]
          }
        ],
        "intent": null,
        "onError": null,
        "cache": null,
        "timeout": null,
        "waitForExecution": true
      }
    ],
    "subGoals": [],
    "visibility": 1,
    "path": "/CatchJapanese.goal",
    "prPath": "/.build/catchjapanese.pr",
    "hash": "60c802606c976f152d5f57bca81d0e5a510c3c76a762e5b2835c240434bcdc3c",
    "builderVersion": "0.3",
    "isSetup": false,
    "isEvent": false,
    "isSystem": false,
    "isTest": false,
    "inputParameters": null
  }
]